fixed button overlapping

--- a/wp-content/themes/pnwmousemeet/assets/sass/style.scss
+++ b/wp-content/themes/pnwmousemeet/assets/sass/style.scss
@@ -32,6 +32,7 @@ a {
 .page-section {
   padding-top: 80px;
   padding-bottom: 80px;
+  position: relative;
   z-index: 5;
 
   .row {
